sysdeps/nacl/bits/typesizes.h
@@ -59,6 +59,7 @@
 #define __SSIZE_T_TYPE		__SWORD_TYPE
 #define __SYSCALL_SLONG_TYPE	__SLONGWORD_TYPE
 #define __SYSCALL_ULONG_TYPE	__ULONGWORD_TYPE
+#define __CPU_MASK_TYPE 	__ULONGWORD_TYPE
 
 /* All our foo64_t types match their foo_t counterparts.  */
 #define __OFF_T_MATCHES_OFF64_T	1
